# mysticcore-engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
examples/: CMakeLists.txt
src/core/: App.cpp  Input.cpp  Logger.cpp  Time.cpp
